--- a/chaincode/baas/typescript/package.json
+++ b/chaincode/baas/typescript/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "fabcar",
+    "name": "baas",
     "version": "1.0.0",
-    "description": "FabCar contract implemented in TypeScript",
+    "description": "baas contract implemented in TypeScript",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
     "engines": {
@@ -12,7 +12,7 @@
         "lint": "tslint -c tslint.json 'src/**/*.ts'",
         "pretest": "npm run lint",
         "test": "nyc mocha -r ts-node/register src/**/*.spec.ts",
-        "start": "fabric-chaincode-node server --chaincode-address fabcar.org1.example.com:9999 --chaincode-id fabcar_1.0:01cd60642bf7e22c4dead39171283f516b50b0c98fd42ccbceb751adaddf1586",
+        "start": "fabric-chaincode-node server --chaincode-address baas.org1.example.com:9999 --chaincode-id baas_1.0:01cd60642bf7e22c4dead39171283f516b50b0c98fd42ccbceb751adaddf1586",
         "build": "tsc",
         "build:watch": "tsc -w",
         "prepublishOnly": "npm run build"
