--- a/baas/javascript/package.json
+++ b/baas/javascript/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "fabcar",
+    "name": "baas",
     "version": "1.0.0",
-    "description": "FabCar application implemented in JavaScript",
+    "description": "baas application implemented in JavaScript",
     "engines": {
         "node": ">=8",
         "npm": ">=5"
