--- a/baas/javascript/package.json
+++ b/baas/javascript/package.json
@@ -15,8 +15,13 @@
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
+        "body-parser": "^1.20.2",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
         "fabric-ca-client": "^2.2.4",
-        "fabric-network": "^2.2.4"
+        "fabric-network": "^2.2.4",
+        "helmet": "^6.0.1"
     },
     "devDependencies": {
         "chai": "^4.2.0",
