--- a/baas/javascript/package.json
+++ b/baas/javascript/package.json
@@ -21,7 +21,9 @@
         "express": "^4.18.2",
         "fabric-ca-client": "^2.2.4",
         "fabric-network": "^2.2.4",
-        "helmet": "^6.0.1"
+        "helmet": "^6.0.1",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^4.1.4"
     },
     "devDependencies": {
         "chai": "^4.2.0",
